--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,18 @@ package-mode = false
 python = "^3.12"
 django = "^5.1"
 
+[tool.poetry.group.dev]
+optional = true
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.3"
+pytest-django = "^4.9.0"
+
+[tool.pytest.ini_options]
+DJANGO_SETTINGS_MODULE = "devpro.settings"
+python_files = ["test*.py", "*.p_testy"]
+
+
 
 [build-system]
 requires = ["poetry-core"]
