--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ optional = true
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
 pytest-django = "^4.9.0"
+pytest-cov = "^5.0.0"
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "devpro.settings"
