--- a/.github/workflows/django_ci.yml
+++ b/.github/workflows/django_ci.yml
@@ -11,10 +11,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 1
+      
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+  
+      - name: Instalação de Dependências (com Poetry)
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install poetry
+          poetry install --with dev --sync
 
-      - name: Comando de sucesso
-        run: ls /   
+      - name: Rodar testes do Django com cobertura
+        run: poetry run pytest devpro --cov=devpro --cov-fail-under=82
+  
+  
 
