Add postgresql em img e no ci

--- a/.github/workflows/django_ci.yml
+++ b/.github/workflows/django_ci.yml
@@ -9,7 +9,13 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    services:
+      postgres:
+        image: postgres:16.3
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        ports: [ '5432:5432' ]
     steps:
       - uses: actions/checkout@v4
         with:
