--- a/.github/workflows/django_ci.yml
+++ b/.github/workflows/django_ci.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Lint
         run: poetry run task lint
 
+      - name: Copy instance config variables
+        run: cp ../config/env-sample .env
+
       - name: Rodar testes do Django com cobertura
         run: poetry run pytest devpro --cov=devpro --cov-fail-under=82
   
