--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ package-mode = false
 [tool.poetry.dependencies]
 python = "^3.12"
 django = "^5.1"
+psycopg2 = "^2.9.9"
+dj-database-url = "^2.2.0"
+python-decouple = "^3.8"
 
 [tool.poetry.group.dev]
 optional = true
