--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ python_files = ["test*.py", "*.p_testy"]
 
 [tool.ruff]
 line-length=120
-exclude = ['./devpro/base/migrations']
+exclude = ['./devpro/base/migrations', '.pgdata']
 
 [tool.ruff.lint]
 select = ['I', 'F', 'E', 'W', 'PL', 'PT']
